# MatrixCore

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yml
benchmarks/: benchmark.py
docs/: api.md  changelog.md  conf.py  index.md  requirements.txt  tutorial.md
examples/: basic_solving.py  matlab_format.py  mtx_format.py  rb_format.py
matrixcore/: __init__.py  diagnostics.py  exceptions.py  solver.c  solver.pyx  solvers.c  solvers.pyi  solvers.pyx
matrixcore/io/: __init__.py  matlab.py  mtx.py  rb.py  tb.py
src/: solvers.c  solvers.h
tests/: conftest.py  test_adversarial.py  test_diagnostics.py  test_examples.py  test_exceptions.py  test_io.py  test_property.py  test_robustness.py  test_scale_robustness.py  test_solver.py  test_suitesparse.py
